Changes alignment to left and avoids widget card edition of label field

--- a/app/assets/stylesheets/custom/_slider.scss
+++ b/app/assets/stylesheets/custom/_slider.scss
@@ -13,10 +13,10 @@ $padding: 30px;
 
   .content-left, .content-right {
     padding: 5em 1em;
-    text-align: center;
+    text-align: left;
     display:flex;
     flex-direction: column;
-    height: 30em;
+    height: 34em;
     justify-content: center;
     h1 {
       font-family: Roboto;
@@ -25,8 +25,7 @@ $padding: 30px;
       color: #1C9799;
     }
     p {
-      width: 70%;
-      margin: auto;
+      width: 90%;
       font-family: Roboto;
       font-size: 16px;
       color: #191919;
@@ -37,7 +36,7 @@ $padding: 30px;
     .buttons {
       margin: 15px 0px;
       display: flex;
-      justify-content: space-around;
+      justify-content: left;
       a.button {
         margin: 1em;
       }
